--- a/_includes/content.html
+++ b/_includes/content.html
@@ -76,7 +76,7 @@
 
 
 <tr><td>Reference</td>
-  <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
+  <td><audio controls style="width: 110px;" src="audio_examples/nat/k61be011.wav"></audio></td>
   <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
   <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
   <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
@@ -88,7 +88,7 @@
   <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
 </tr>
 <tr><td>Condition 1</td>
-  <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
+  <td><audio controls style="width: 110px;" src="audio_examples/l2m/k61be011.wav"></audio></td>
   <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
   <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
   <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
