--- a/_includes/content.html
+++ b/_includes/content.html
@@ -77,10 +77,10 @@
 
 <tr><td>Reference</td>
   <td><audio controls style="width: 110px;" src="audio_examples/nat/k61be011.wav"></audio></td>
-  <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
-  <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
-  <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
-  <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
+  <td><audio controls style="width: 110px;" src="audio_examples/nat/k61be018.wav"></audio></td>
+  <td><audio controls style="width: 110px;" src="audio_examples/nat/k61be030.wav"></audio></td>
+  <td><audio controls style="width: 110px;" src="audio_examples/nat/k61be037.wav"></audio></td>
+  <td><audio controls style="width: 110px;" src="audio_examples/nat/k61be061.wav"></audio></td>
   <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
   <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
   <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
@@ -89,10 +89,10 @@
 </tr>
 <tr><td>Condition 1</td>
   <td><audio controls style="width: 110px;" src="audio_examples/l2m/k61be011.wav"></audio></td>
-  <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
-  <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
-  <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
-  <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
+  <td><audio controls style="width: 110px;" src="audio_examples/l2m/k61be018.wav"></audio></td>
+  <td><audio controls style="width: 110px;" src="audio_examples/l2m/k61be030.wav"></audio></td>
+  <td><audio controls style="width: 110px;" src="audio_examples/l2m/k61be037.wav"></audio></td>
+  <td><audio controls style="width: 110px;" src="audio_examples/l2m/k61be061.wav"></audio></td>
   <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
   <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
   <td><audio controls style="width: 110px;" src="audio_examples/.wav"></audio></td>
