--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,11 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
+      <div id="particle-canvas"></div>
+	    <script type="text/javascript" src="particle-network.min.js"></script>
+	    <script type="text/javascript">
+		    var particleCanvas = new ParticleNetwork(canvasDiv, options);
+	    </script>
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
