--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,18 @@
 
     <header class="page-header" role="banner">
       <div id="particle-canvas"></div>
-	    <script type="text/javascript" src="particle-network.min.js"></script>
-	    <script type="text/javascript">
-		    var particleCanvas = new ParticleNetwork(canvasDiv, options);
-	    </script>
+		<script type="text/javascript" src="particle-network.min.js"></script>
+		<script type="text/javascript">
+			var canvasDiv = document.getElementById('particle-canvas');
+			var options = {
+				particleColor: '#888',
+				background: 'img/demo-bg.jpg',
+				interactive: true,
+				speed: 'medium',
+				density: 'high'
+			};
+			var particleCanvas = new ParticleNetwork(canvasDiv, options);
+		</script>
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
