--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,16 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
+    <style type="text/css">
+			body {
+				margin:0;
+				padding:0;
+			}
+			#particle-canvas {
+				width:100%;
+				height:100%;
+			}
+		</style>
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
@@ -24,21 +34,14 @@
       {% if site.show_links %}
         <a href="#audio_examples" class="btn">Audio Examples</a>
       {% endif %}
-    </header>
 
-    <div id="particle-canvas"></div>
-		<script type="text/javascript" src="particle-network.min.js"></script>
+      <script type="text/javascript" src="particle-network.min.js"></script>
 		<script type="text/javascript">
 			var canvasDiv = document.getElementById('particle-canvas');
-			var options = {
-				particleColor: '#888',
-				background: 'img/demo-bg.jpg',
-				interactive: true,
-				speed: 'medium',
-				density: 'high'
-			};
 			var particleCanvas = new ParticleNetwork(canvasDiv, options);
 		</script>
+    </header>
+
 
     <main id="content" class="main-content" role="main">
       {{ content }}
