--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_links %}
+        <a href="#functionality" class="btn">How it works</a>
         <a href="#audio_examples" class="btn">Audio Examples</a>
       {% endif %}
 
