--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,17 +10,8 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="css/animate.css">
     {% include head-custom.html %}
-    <style type="text/css">
-			body {
-				margin:0;
-				padding:0;
-			}
-			#particle-canvas {
-				width:100%;
-				height:100%;
-			}
-		</style>
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
